syntax = "proto3";

/* >>
import "google/api/annotations.proto";
<< */


package Server;

message ProductItemRequest {
	string declination = 1;
	string reference = 2;
}

message ProductItemResponse {
	string reference = 1;
    int32 order = 2;
    bool is_bio = 3;
}

message PaginedProductItemsRequest {
	string declination = 1;
    int32 pageIndex=2;
    int32 pageSize=3;
}

message PaginedProductItemsResponse {
	repeated ProductItemResponse data = 1;
    int32 pageIndex=2;
    int32 pageSize=3;
    int32 total=4;
}

message StreamedProductItemsRequest {
	string declination = 1;
	repeated string references = 2;
}

service Product {
  rpc GetProductByDeclinationAndReference (ProductItemRequest) returns (ProductItemResponse) {
   /* >>
  	option (google.api.http) = {
        get: "/api/v1/product/items/{declination}/{reference}"
      };
	<< */
	}
  rpc GetPaginedProductsByDeclination (PaginedProductItemsRequest) returns (PaginedProductItemsResponse) {}

  rpc GetStreamedProductsByDeclinationAndReferences (StreamedProductItemsRequest) returns (stream ProductItemResponse) {}
}